writing multiple lines using pipe1

--- a/.github/workflows/learning_first.yml
+++ b/.github/workflows/learning_first.yml
@@ -8,11 +8,17 @@ jobs:
         steps: 
         - name: action repo
           uses: actions/checkout@v4
+        - name: readfiles/message
+          run: |
+           sudo apt-get install ansible -y
+           echo "my name is lewis"
+           ls -ltra
+           cat README.md
         
-        - name: message my name
-          run: echo "my name is lewis"
-        - name: listfiles
-          run: ls -ltra
-        - name: readfiles
-          run: cat README.md
+        # name: message my name
+        #  run: echo "my name is lewis"
+        # name: listfiles
+         # run: ls -ltra
+        #- name: readfiles
+        #  run: cat README.md
          
