changing permission of my  shell script file

--- a/.github/workflows/learning_first.yml
+++ b/.github/workflows/learning_first.yml
@@ -8,6 +8,9 @@ jobs:
         steps: 
         - name: action repo
           uses: actions/checkout@v4
+
+        - name: change permissionn
+          run: chmod +x ascii_file.sh
        
         - name: list repofiles
           run: ls -ltra
