--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -14,7 +14,7 @@ jobs:
 
         steps:
         - name: docker build
-          run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest
+          run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest .
 
         - name: Docker Login
           env:
@@ -22,7 +22,7 @@ jobs:
           run: echo docker login --username=$DOCKER_USERNAME --password=$docker_password
 
         - name: docker publish
-          run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest
+          run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest .
 
         
         
