--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -5,7 +5,7 @@ on: push
 env:
     CONTAINER_REGISTRY: Docker.io
     DOCKER_USERNAME: lewisacid
-    DOCKER_IMAGENAME: github-actions-ngnix
+    DOCKER_IMAGENAME: github-actions-nginx
 
 jobs:
 
@@ -13,16 +13,19 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: docker build
-          run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest .
+
+        - name: List files (debug)
+          run: ls -la
+        - name: Docker build
+          run: Docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest.
 
         - name: Docker Login
           env:
-            docker_password: lewisacid@11223
-          run: echo docker login --username=$DOCKER_USERNAME --password=$docker_password
+            Docker_password: lewisacid@11223
+          run: echo Docker login --username=$DOCKER_USERNAME --password=$Docker_password
 
-        - name: docker publish
-          run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest .
+        - name: Docker publish
+          run: echo Docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest.
 
         
         
