--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -5,7 +5,7 @@ on: push
 env:
     CONTAINER_REGISTRY: Docker.io
     DOCKER_USERNAME: lewisacid
-    DOCKER_IMAGENAME: github-actions-nginx
+    IMAGE_NAME: github-actions-nginx
 
 jobs:
 
@@ -17,7 +17,7 @@ jobs:
         - name: List files (debug)
           run: ls -la
         - name: Docker build
-          run: Docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest.
+          run: Docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest .
 
         - name: Docker Login
           env:
@@ -25,7 +25,7 @@ jobs:
           run: echo Docker login --username=$DOCKER_USERNAME --password=$Docker_password
 
         - name: Docker publish
-          run: echo Docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest.
+          run: echo Docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest .
 
         
         
