--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -3,7 +3,7 @@ name: exploring variables and secrets
 on: push
 
 env:
-    CONTAINER_REGISTRY: Docker.io
+    CONTAINER_REGISTRY: docker.io
     DOCKER_USERNAME: lewisacid
     IMAGE_NAME: github-actions-nginx
 
