--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -14,6 +14,17 @@ jobs:
 
         steps:
 
+        - name: docker apt update
+          run: sudo apt update
+
+        - name: installing docker
+
+          run: sudo apt install docker.io
+
+        - name: systemctl enable
+
+          run: sudo systemctl enable --now docker
+
         - name: List files (debug)
           run: ls -la
         - name: Docker build
