--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -14,21 +14,12 @@ jobs:
 
         steps:
 
-        - name: docker apt update
-          run: sudo apt update
-
-        - name: installing docker
-
-          run: sudo apt install docker.io
-
-        - name: systemctl enable
-
-          run: sudo systemctl enable --now docker
+        
 
         - name: List files (debug)
           run: ls -la
         - name: Docker build
-          run: Docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest .
+          run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$DOCKER_IMAGENAME:latest .
 
         - name: Docker Login
           env:
