--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -21,7 +21,7 @@ jobs:
 
         
         - name: Docker build
-          run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest .
+          run: docker build -t docker.io/lewisacid/github-actions-nginx:latest -f docker/Dockerfile .
 
         - name: Docker Login
           env:
