--- a/.github/workflows/variable_secrets.yml
+++ b/.github/workflows/variable_secrets.yml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: docker build
-          run: docker buid -t docker.io/dockerUsername/imageName:latest
+          run: docker build -t docker.io/dockerUsername/imageName:latest
 
         - name: docker login
           run: docker login --username=dockerUsername --password=s3crets
