--- a/.github/workflows/variable_secrets.yml
+++ b/.github/workflows/variable_secrets.yml
@@ -10,7 +10,7 @@ jobs:
           run: docker build -t docker.io/dockerUsername/imageName:latest.
 
         - name: docker login
-          run: docker login --username=dockerUsername --password=s3crets
+          run: docker login --username=dockerUsername --password=s3cretspassword
 
         - name: docker publish
           run: docker push docker.io/dockerUsername/imageName:latest.
