--- a/.github/workflows/variable_secrets.yml
+++ b/.github/workflows/variable_secrets.yml
@@ -1,19 +1,36 @@
-name: exploring variables and secrets
-
-on: push
+on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 jobs:
-    Docker:
-        runs-on: ubuntu-latest
-        steps:
-        - name: docker build
-          run: docker build -t docker.io/dockerUsername/imageName:latest .
-
-        - name: docker login
-          run: docker login --username=dockerUsername --password=s3cretspassword
-
-        - name: docker publish
-          run: docker push docker.io/dockerUsername/imageName:latest .
+  log-the-inputs:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "Log level: $LEVEL"
+          echo "Tags: $TAGS"
+          echo "Environment: $ENVIRONMENT"
+        env:
+          LEVEL: ${{ inputs.logLevel }}
+          TAGS: ${{ inputs.tags }}
+          ENVIRONMENT: ${{ inputs.environment }}
 
     
 
